# hft-nse-bse-arb

./: .gitignore  CMakeLists.txt  CODEBASE_INDEX.md  Makefile  README.md
.github/workflows/: ci.yml
apps/: hft_demo.cpp  scenario_suite.cpp
bench/: bench_pipeline.cpp
config/: costs.yml  instruments.csv  latency.yml  risk.yml
config/scenarios/: bse_buy_fills_nse_sell_reject.yml  clean.yml  nse_sell_fills_bse_buy_reject.yml
data/: sample_day.csv  sample_gap.csv
data/example_out/: fills.csv  latency.csv  orders.csv  pnl_summary.csv  scenario_report.csv  scenario_report.md
docs/: architecture.md  component_walkthrough.md  development_index.md  interview_notes.md  performance.md  scenarios.md  verification.md  whitepaper.md
scripts/: run_all_scenarios.sh  run_demo.sh
sql/: create_tables.sql
src/book/: best_quote.hpp  book_manager.cpp  book_manager.hpp  order_book.cpp  order_book.hpp
src/common/: config.cpp  config.hpp  csv.cpp  csv.hpp  ids.hpp  types.cpp  types.hpp
src/hedge/: hedge_policy.cpp  hedge_policy.hpp  pair_trade.cpp  pair_trade.hpp
src/md/: book_event.hpp  csv_parser.cpp  csv_parser.hpp  feed_health.hpp  market_data_handler.cpp  market_data_handler.hpp  packet.hpp  replay_reader.cpp  replay_reader.hpp  sequence_tracker.hpp
src/metrics/: latency_recorder.cpp  latency_recorder.hpp
src/oms/: fill.hpp  gateway.hpp  order_intent.hpp  order_manager.cpp  order_manager.hpp  order_state.hpp  reconciler.hpp
src/risk/: guards.hpp  kill_switch.hpp  position_book.cpp  position_book.hpp  rate_limiter.hpp  risk_config.cpp  risk_config.hpp  risk_engine.cpp  risk_engine.hpp  risk_event.hpp
src/sim/: matching_engine.cpp  matching_engine.hpp  (+4 more)
tests/: test_main.cpp
tools/: report_pnl.py  scenario_report.py  update_tracker.py
(+38 files in other folders)
